# 3dfx-Glide-API

./: CMakeLists.txt  Dockerfile  README  README.md  run_docker.bat
.github/workflows/: build_glide2_linux.yml  build_glide2_voodoo2.yml  build_glide2_voodoo3.yml  build_glide3_linux.yml  build_glide3_voodoo2.yml  build_glide3_voodoo45.yml  build_glide3_voodoo45_gcc.yml  build_glide3_voodoo45_msvc.yml  docker-image.yml
common/: CMakeLists.txt
glide2x/cvg/: CMakeLists.txt  build_glide2_debug.sh
glide2x/cvg/glide/oem/: oeminit.c
glide2x/cvg/glide/src/: cpuid.c  fifo.c  fpu.c  fxglide.h  gerror.c  glide.h  gpci.c  guclip.c  xdraw2_x64.c
glide2x/cvg/glide/src/fxgasm_tool/: CMakeLists.txt
glide2x/h3/: CMakeLists.txt
glide2x/h3/glide/src/: cpudtect_stubs.c
glide2x/h3/minihwc/: minihwc.h
glide3x/: CMakeLists.txt  README
glide3x/cvg/: CMakeLists.txt  build_glide3_debug.sh
glide3x/cvg/glide3/src/: cpuid.c
glide3x/cvg/glide3/src/fxgasm_tool/: CmakeLists.txt
glide3x/cvg/init/: sst1init.h
glide3x/h5/: CMakeLists.txt  build_glide3_debug.sh
glide3x/h5/glide3/src/: fxglide.h
glide3x/h5/glide3/src/fxgasm_tool/: CMakeLists.txt
glide3x/h5/minihwc/: minihwc.c
glide3x/sst1/glide3/src/: disst.c  distrip.c  fxgasm.c  fxglide.h  gaa.c  gdraw.c  gerror.c  gglide.c  glfb.c  gpci.c  gsst.c  gstrip.c  gtexdl.c  gxdraw.c
glide3x/sst1/incsrc/: sst.h
glide3x/sst1/init/: init.c  vgdrvr.c
glide3x/sst1/init/initvg/: info.c  sst1init.c  sst1init.h
swlibs/: CMakeLists.txt
swlibs/fxmemmap/: CMakeLists.txt
swlibs/fxmisc/: CMakeLists.txt  fxdll.h
swlibs/newpci/: CMakeLists.txt
swlibs/texus2/: CMakeLists.txt
